# hypr-dwindle-solo

./: CMakeLists.txt  LICENSE  Makefile  README.md  globals.hpp  hyprpm.toml  main.cpp  soloCenter.cpp  soloCenter.hpp
